--- a/mabby.svelte/src/app.html
+++ b/mabby.svelte/src/app.html
@@ -9,4 +9,12 @@
 	<body data-sveltekit-preload-data="hover">
 		<div>%sveltekit.body%</div>
 	</body>
+	<style>
+		body, html {
+			margin: 0;
+			padding: 0;
+			max-width: 100%;
+			height: 100vh;
+		}
+	</style>
 </html>
