--- a/mabby.svelte/src/app.html
+++ b/mabby.svelte/src/app.html
@@ -9,12 +9,20 @@
 	<body data-sveltekit-preload-data="hover">
 		<div>%sveltekit.body%</div>
 	</body>
+	<footer>
+		footer
+	</footer>
 	<style>
 		body, html {
 			margin: 0;
 			padding: 0;
-			max-width: 100%;
+			max-width: 100vw;
 			height: 100vh;
+		}
+
+		footer {
+			background-color: black;
+			color: aliceblue;
 		}
 	</style>
 </html>
