--- a/mabby.svelte/src/app.html
+++ b/mabby.svelte/src/app.html
@@ -10,7 +10,9 @@
 		<div>%sveltekit.body%</div>
 	</body>
 	<footer>
-		footer
+		<p>
+			© 2024 Todos los derechos reservados para mabby1110 🐝
+		</p>
 	</footer>
 	<style>
 		body, html {
@@ -24,6 +26,9 @@
 		footer {
 			background-color: black;
 			color: aliceblue;
+			display: flex;
+			justify-content: center;
+			padding: 2rem;
 		}
 	</style>
 </html>
