--- a/mabby.svelte/src/app.html
+++ b/mabby.svelte/src/app.html
@@ -30,5 +30,59 @@
 			justify-content: center;
 			padding: 2rem;
 		}
+
+		img {
+			width: 4rem;
+			height: 4rem;
+			border-radius: 50%;
+		}
+
+		nav {
+			grid-area: 1 / 4 / 2 / 10;
+
+			display: flex;
+			justify-content: space-evenly;
+			align-items: center;
+			z-index: 1;
+		}
+
+		.grid_container {
+			height: 100vh;
+			display: grid;
+			gap: 0.4rem;
+			grid-template-columns: repeat(12, 1fr);
+			grid-template-rows: repeat(12, 1fr);
+			background-image:url('/src/lib/assets/cross-bg.svg');
+			background-size: cover;
+			z-index: 0;
+		}
+
+		.component_title {
+			box-sizing: border-box;
+			border-style: dashed;
+			border-color:rgb(0, 0, 0);
+			border-width: 1px;
+			grid-area: 3 / 3 / 5 / 6;
+			z-index: 1;
+			min-height: 15rem;
+
+		}
+
+		.component_content {
+			box-sizing: border-box;
+			border-style: dashed;
+			border-color:rgb(0, 0, 0);
+			border-width: 1px;
+			grid-area: 3 / 6 / 7 / 11;
+			z-index: 1;
+			min-height: 28rem;
+		}
+
+		.component_bg {
+			z-index: 0;
+			
+			grid-area: 1 / 1 / -1 / -1;
+			z-index: 0;
+		}
 	</style>
 </html>
